--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,72 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.introduction-desc h1, .about-text h1, .why-desc h1, .gabung-desc h1{
+  color: #58B958;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.terpercaya{
+  background-color: #F6FFED;
+  box-shadow: 0 2px 2px 2px rgb(0 0 0 / 0.1);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.gabung{
+  background-color: #D9F7BE;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 991.98px) {
+  .introduction{
+    display: flex;
+    flex-direction: column-reverse;
   }
-  to {
-    transform: rotate(360deg);
+  .introduction-desc h1, .introduction-desc p{
+    text-align: center;
+    margin-left: 1.25rem; /* 20px */
+    margin-right: 1.25rem; /* 20px */
+  }
+  .about-us, .gabung{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .about-image{
+    width: 50% !important;
+  }
+  .about-image img{
+    height: auto;
+  }
+  .about-text{
+    text-align: center;
+  }
+  .about-text h1, .about-text p, .gabung-desc h1, .gabung-desc p{
+    margin-left: 1.25rem; /* 20px */
+    margin-right: 1.25rem; /* 20px */
   }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (max-width: 780px) {
+  .about-us{
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  .introduction-desc h1, .about-text h1, .why-desc h1, .gabung-desc h1{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+  .introduction-desc p{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+  .about-text p{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+  .img-gabung, .about-image, .introduction-image{
+    margin-top: 2rem; /* 32px */
+    margin-bottom: 2rem; /* 32px */
+  }
+  .gabung-desc{
+    margin-bottom: 2.5rem;
+  }
 }
