--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ body{
     margin-left: 1.25rem; /* 20px */
     margin-right: 1.25rem; /* 20px */
   }
+ 
 }
 @media (max-width: 780px) {
   .about-us{
@@ -68,5 +69,9 @@ body{
   }
   .gabung-desc{
     margin-bottom: 2.5rem;
+  }
+  .btn-profile{
+    height: 2rem;
+    margin-top: 0.25rem;
   }
 }
