menambahkan pagination di riwayat

--- a/src/components/History.css
+++ b/src/components/History.css
@@ -5,6 +5,13 @@
   border-radius: 24px;
   cursor: pointer;
 }
+.confirmed-status {
+  background-color: #52c41a;
+  color: black;
+  padding: 5px 20px;
+  border-radius: 24px;
+  cursor: pointer;
+}
 .detail-button {
   background-color: #52c41a;
   color: black;
