--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,33 @@ body{
 .gabung{
   background-color: #D9F7BE;
 }
+.img-home img{
+  border-radius: 32px;
+  box-shadow: 0 2px 2px 2px rgb(0 0 0 / 0.1);
+}
+.text-home{
+  color: #1B501C;
+}
+.btn-home{
+  background-color: #5B7D2E;
+}
+.btn-home:hover{
+  background-color: #1B501C;
+}
+.coin{
+  background-color: #F2F8EA;
+  border-radius: 20px;
+  box-shadow: 0 2px 2px 2px rgb(0 0 0 / 0.1);
+}
+.line{
+  border-left: solid 2px #C4C4C4;
+}
+.slide-image{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.carousel-img{
+  width: 100vw;
+}
 @media (max-width: 991.98px) {
   .introduction{
     display: flex;
@@ -45,7 +72,7 @@ body{
   }
  
 }
-@media (max-width: 780px) {
+@media (max-width: 766px) {
   .about-us{
     display: flex;
     justify-content: center;
@@ -73,5 +100,44 @@ body{
   .btn-profile{
     height: 2rem;
     margin-top: 0.25rem;
+  }
+  .img-home img{
+    border-radius: 16px;
+  }
+  .text-home{
+    top:70px
+  }
+  .text-home p{
+    font-size: 0.75rem; /* 12px */
+    line-height: 1rem; /* 16px */
+  }
+  .text-home h1{
+    font-size: 1.125rem; /* 18px */
+    line-height: 1.75rem; /* 28px */
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .text-home button{
+    font-size: 0.75rem; /* 12px */
+    line-height: 1rem; /* 16px */
+    padding: 0.25rem 1.5rem 0.25rem 1.5rem;
+  }
+  .coin{
+    border-radius: 12px;
+  }
+  .coin-user img, .redeem-coin img{
+    max-height: 2rem; /* 32px */
+  }
+  .coin-user h1{
+    font-size: 1.125rem; /* 18px */
+    line-height: 1.75rem; /* 28px */
+  }
+  .coin-user p{
+    font-size: 0.75rem; /* 12px */
+    line-height: 1rem; /* 16px */
+  }
+  .redeem-coin p{
+    font-size: 0.875rem; /* 14px */
+    line-height: 1.25rem; /* 20px */
   }
 }
