--- a/src/components/component.css
+++ b/src/components/component.css
@@ -12,3 +12,11 @@
     border: 1px solid #52C41A;
     color: #52C41A;
 }
+.btn-outline:hover{
+    background-color: #254416;
+    color: white;
+}
+.navbar-sarange{
+    box-shadow: 0 2px 4px 2px rgb(0 0 0 / 0.1);
+    z-index: 2;
+}
