--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
-body{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 .introduction-desc h1, .about-text h1, .why-desc h1, .gabung-desc h1{
   color: #58B958;
