--- a/src/components/History.css
+++ b/src/components/History.css
@@ -1,3 +1,7 @@
+.tabel {
+  margin-left: 75px;
+  margin-right: 75px;
+}
 .status-button {
   background-color: #ffd666;
   color: black;
@@ -18,4 +22,11 @@
   padding: 5px 20px;
   border-radius: 24px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .tabel {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
