add input number and redeem success

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,13 @@ body{
 .redeem-ewallet, .redeem-card{
   gap: 2.5rem;
 }
+.popup{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.popup-content{
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 16px;
+}
 @media (max-width: 991.98px) {
   .introduction{
     display: flex;
