--- a/src/components/component.css
+++ b/src/components/component.css
@@ -92,6 +92,19 @@ input.count-checkout[type=number] {
     box-shadow: 0 2px 4px 2px rgb(0 0 0 / 0.1);
     cursor: pointer;
 }
+.article-card img {
+    min-width: 30%;
+}
+.socmed-icon {
+    padding: 8px;
+    background-color: #52C41A;
+    color: white;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.socmed-icon:hover {
+    background-color: #254416;
+}
 @media (max-width: 766px){
     .card-redeem{
         width: 5rem;
