--- a/src/components/component.css
+++ b/src/components/component.css
@@ -128,4 +128,19 @@ input.count-checkout[type=number] {
     .card-coin p {
         font-size: 15px;
     }
+    .footer{
+        padding-left: 0;
+        padding-right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .copyright {
+        height: 10px;
+        font-size: 10px;
+    }
+    .socmed-icon {
+        height: 10px;
+        padding: 5px;
+      }
 }
